--- a/templates/SA.html
+++ b/templates/SA.html
@@ -7,8 +7,10 @@
 <body>
      <div class="container">
         <h2>Sentiment Analysis</h2>
-        <form action="/SA" method="post">
-        <input type="submit" value="Sentiment Analysis">
+        <form action="/SA_result" method="post">
+        <input type="text" name="q">
+        <input type="submit" value="Enter">
         </form>
+
      </div>
 </body>
