--- a/templates/paynow.html
+++ b/templates/paynow.html
@@ -24,7 +24,7 @@
         <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
         <script>
             const contractAddress = "0x7124feceb494b49f4eefea5052e551e8d73c486f";
-            const contractABI = [[
+            const contractABI = [
                 {
                     "inputs": [],
                     "stateMutability": "nonpayable",
@@ -76,7 +76,7 @@
                     "stateMutability": "view",
                     "type": "function"
                 }
-            ]];
+            ];
             const web3 = new Web3(Web3.givenProvider);
             const contract = new web3.eth.Contract(contractABI, contractAddress);
              async function transfer() {
@@ -88,13 +88,13 @@
         
                 console.log("accounts[0] " + accounts[0]);
                 await contract.methods.weixin(payer, payee,amount).send({ from: accounts[0]});
-    }
-    async function transaction() {
-        const result = await contract.methods.transaction().call();
-        document.getElementById('view_payer').innerText = "Payer: " + result[0];
-        document.getElementById('view_payee').innerText = "Payee: " + result[1];
-        document.getElementById('view_amount').innerText = "Amount: " + result[2];
-    }
+            }
+            async function transaction() {
+                const result = await contract.methods.transaction().call();
+                document.getElementById('view_payer').innerText = "Payer: " + result[0];
+                document.getElementById('view_payee').innerText = "Payee: " + result[1];
+                document.getElementById('view_amount').innerText = "Amount: " + result[2];
+            }
 </script>
         
 
